--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Power of CSS</title>
+    <title>Light On Off</title>
 </head>
 <body> 
-  <img id="Style" src="/on.jpg" alt="on" height="500" width="400px">
+  <img id="Style" src="/on.jpg" alt="Cartoon" height="500" width="400px">
   
   <button onclick="restyle(1)">on-----</button>
   <button onclick="restyle(0)">off----</button>
